troubleshooting stuck console footer issue on problem page after submitting. changed height: 100% to 100dvh

--- a/myproject/static/css/problems/problem_page.css
+++ b/myproject/static/css/problems/problem_page.css
@@ -63,9 +63,9 @@ a {
 }
 
 html, body {
-    height: 100%;
+    height: 100dvh;
     margin: 0;
-    overflow: hidden; /* Prevents the whole page from scrolling */
+    overflow: hidden;
 }
 
 body {
